# swagger-output.json
@@ -5,9 +5,10 @@
     "description": "API documentation for CSE 341 Project 1",
     "version": "1.0.0"
   },
-  "host": "cse-341-project1-lahm.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
+    "http",
     "https"
   ],
   "paths": {
@@ -21,7 +22,7 @@
         }
       }
     },
-    "/swagger/api-docs": {
+    "/api-docs": {
       "get": {
         "description": "",
         "responses": {
@@ -72,8 +73,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content"
+          "201": {
+            "description": "Created"
           },
           "500": {
             "description": "Internal Server Error"
